# soc-alert-triage-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: main.py
config/: config.yaml
correlation/: __init__.py  engine.py  mitre_mappings.yaml  tagger.py
docs/: architecture.md  scoring_model.md
docs/screenshots/: .gitkeep
enrichment/: __init__.py  cache.py  shodan_lookup.py  virustotal.py
ingestion/: __init__.py  csv_ingestor.py  json_ingestor.py
reporting/: __init__.py  html_report.py
reporting/templates/: report.html
sample_data/: alerts_sample.csv  alerts_sample.json
scoring/: __init__.py  constants.py  scorer.py
sources/: __init__.py  base.py  elastic_source.py  file_source.py  splunk_source.py
store/: __init__.py  alert_db.py
tests/: test_correlation.py  test_enrichment.py  test_ingestion.py  test_report.py  test_scoring.py
