[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "soc-alert-triage-engine"
version = "0.1.0"
description = "Automated SOC alert triage with threat intelligence enrichment and priority scoring"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "shodan>=1.28.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
