[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-alert-triage-engine"
version = "0.1.0"
description = "Automated SOC alert triage with threat intelligence enrichment and priority scoring"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "shodan>=1.28.0",
    "requests>=2.31.0",
    "elasticsearch>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
